--- a/01-1-Welcome_to_IR.html
+++ b/01-1-Welcome_to_IR.html
@@ -955,6 +955,8 @@
 </ul>
 <p><br></p>
 <p><strong>Questions on this policy?</strong></p>
+<p><br></p>
+<p><strong>SLIDE</strong>: Next class</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
           position:absolute!important;
