--- a/02-1-Poli_Sci_Theory.html
+++ b/02-1-Poli_Sci_Theory.html
@@ -701,7 +701,7 @@
 <p><img data-src="Images/02_1-politics-word-cloud.webp"></p>
 </div></div>
 <aside class="notes">
-<p>All of this is why we started with the case study exercise on Monday.</p>
+<p>All of this is why we started with the case study exercise last class.</p>
 <p><br></p>
 <p>Remember, our aim is not to create the perfect definition.</p>
 <ul>
