--- a/02-2-Models_IR_Theories.html
+++ b/02-2-Models_IR_Theories.html
@@ -954,7 +954,7 @@
 <p><br></p>
 <p>Let me give you an example!</p>
 <ul>
-<li><strong>SLIDE</strong>: EITHER, NASA and a team of international scientists landed men on the moon, OR…</li>
+<li><strong>SLIDE</strong>: On July 20, 1969 the Apollo 11 mission landed on the moon</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -968,22 +968,51 @@
           display:block!important;
       }</style></aside>
 </section>
-<section id="section-13" class="slide level2 center" data-background-image="Images/02-2-Moon-Landings-Blog.jpg">
+<section id="section-13" class="slide level2 center" data-background-image="Images/02_2-moon-landing.avif">
+<h2></h2>
+<aside class="notes">
+<p>The effort to put a man on the moon was a massive national undertaking</p>
+<ul>
+<li><p>A peak workforce of over 400,000 scientists, engineers, technicians, and managers from various companies and universities worked on the Apollo program.</p></li>
+<li><p>A decade of intense work from 1961 to 1969, and</p></li>
+<li><p>It required building entirely new systems from scratch, including the powerful Saturn V rocket, and developing new inventions and techniques that later became everyday technologies</p>
+<ul>
+<li>Fire resistant fabrics, microchips, scratch resistant glasses, cordless tools, water filtration, rechargable hearing aids, and so much more</li>
+</ul></li>
+</ul>
+<p><br></p>
+<p>So either the US government organized an incredible program of discovery that set the stage for US economic dominance, OR…</p>
+<ul>
+<li><strong>SLIDE</strong></li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+<section id="section-14" class="slide level2 center" data-background-image="Images/02-2-Moon-Landings-Blog.jpg">
 <h2></h2>
 <aside class="notes">
 <p>The US government has undertaken the largest, most complicated hoax of all time.</p>
-<p>This required thousands of people to cooperate and keep their secrecy about:</p>
+<p><br></p>
 <ul>
-<li><p>Hiding the actual filming,</p></li>
-<li><p>Tricking the Russians to believe it happened,</p></li>
-<li><p>Keeping all of the actors and crew quiet,</p></li>
-<li><p>Planting a mirror on the moon so experiments can be done from Earth,</p></li>
-<li><p>Building the facilities where the shuttle and lander were built,</p></li>
-<li><p>Writing 100ks of detailed plans, diagrams, budgets and other documents that currently exist and can be reviewed in archives showing the entirety of the project at every step of its development.</p></li>
+<li><p>The conspiracy involved 400,000 people ALL OF WHOM could keep this massive secret</p></li>
+<li><p>We were able to completely fool the Russians who had their own spy program and space program focused on everything we were doing</p></li>
+<li><p>We somehow planted a mirror on the moon so experiments can be done from Earth,</p></li>
+<li><p>We wrote hundreds of thousands of detailed plans, diagrams, budgets and other documents that currently exist and can be reviewed in archives showing the entirety of the project at every step of its development.</p></li>
 <li><p>etc.</p></li>
 </ul>
 <p><br></p>
-<h3 id="so-you-know-50-50-right">So, you know, 50-50, right?</h3>
+<p>So, you know, 50-50, right?</p>
+<p><br></p>
+<p><strong>SLIDE</strong>: That brings us back to evaluating theories by their usefulness</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
           position:absolute!important;
